--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.11.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dnd": "^16.0.1",
